# reduce-image-size-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml
src/: cli.rs  constants.rs  lib.rs  logic.rs  main.rs
