[package]
name = "reduce_image_size"
version = "0.2.3"
edition = "2021"
authors = ["Ivan Lazarević"]
description = "Reduces size of images in a folder (and optionally sub-folders, recursively)."
repository = "https://github.com/ivanbgd/reduce-image-size-rust"
license = "MIT"
keywords = ["image", "images", "photo", "jpeg", "png"]
categories = ["computer-vision", "multimedia", "multimedia::images", "command-line-utilities"]

[profile.release]
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reduce_image_size"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
fast_image_resize = { version = "4.0.0" }
image = "0.24.9"
oxipng = { version = "9.1.1", default-features = false, features = ["parallel"] }
pathdiff = { version = "0.2.1" }
turbojpeg = { version = "1.1.0", features = ["image"] }
walkdir = "2.5.0"
