[package]
name = "reduce_image_size"
description = "Reduces size of images in a folder (and optionally sub-folders, recursively)."
version = "0.2.4"
authors = ["Ivan Lazarević"]
repository = "https://github.com/ivanbgd/reduce-image-size-rust"
license = "MIT"
readme = "README.md"
categories = ["computer-vision", "multimedia", "multimedia::images", "command-line-utilities"]
keywords = ["image", "images", "photo", "jpeg", "png"]
edition = "2024"
rust-version = "1.89.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reduce_image_size"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
fast_image_resize = { version = "5.3.0" }
image = "0.25.8"
oxipng = { version = "9.1.5", default-features = false, features = ["parallel"] }
pathdiff = { version = "0.2.3" }
turbojpeg = { version = "1.3.3", features = ["image"] }
walkdir = "2.5.0"

[profile.dev.package.oxipng]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
